--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Adir Elfersy</title>
-  <meta name="description" content="Adir Elfersy Protfolio Site">
-  <meta name="author" content="Adir Elfersy">
+  <title>Kyriakos Baltatzidis</title>
+  <meta name="description" content="Kyriakos Baltatzidis portofolio site">
+  <meta name="author" content="Kyriakos Baltatizidis">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
     crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
@@ -28,11 +28,10 @@
 
 <body>
   <div class="container container-fixes-up aldrich-font">
-    <h1>ADIR
+    <h1>Kyriakos Baltatzidis
     </h1>
     <h3>
-      CV
-      <i class="fa fa-grav fa-1x avatar-icon" aria-hidden="true"></i>
+         CV
       </h1>
   </div>
   <div class="container boxshadow container-fixes">
@@ -44,37 +43,22 @@
               </a>
             </div>
             <div class="col-auto">
-              <a href="docs/Adir Elfersy Cv RZ.pdf">
+              <a href="docs/KyriakosBaltatzidis.pdf">
               <i class="fa fa-file-pdf-o avatar-icons" aria-hidden="true"></i>
               </a>
             </div>
             <div class="col-auto">
-                <a href="docs/Adir Elfersy Cv RZ.docx">
-                <i class="fa fa-file-word-o avatar-icons" aria-hidden="true"></i>
-                </a>
-              </div>
-            <div class="col-auto">
-                <a href="tel:0543151375">
+                <a href="tel:+306976738335">
               <i class="fa fa-phone avatar-icons" aria-hidden="true"></i>
               </a>
             </div>
             <div class="col-auto">
-                <a href="https://github.com/adirel">
+                <a href="https://github.com/p18balt">
               <i class="fa fa-github avatar-icons" aria-hidden="true"></i>
               </a>
             </div>
             <div class="col-auto">
-                <a href="https://linkedin.com/in/adir-elfersy-6a81b931">
-              <i class="fa fa-linkedin-square avatar-icons" aria-hidden="true"></i>
-              </a>
-            </div>
-             <div class="col-auto">
-                <a href="https://api.whatsapp.com/send?phone=972543151375">
-              <i class="fa fa-whatsapp avatar-icons" aria-hidden="true"></i>
-              </a>
-            </div>
-            <div class="col-auto">
-                <a href="mailto:adir.elfersy@gmail.com?Subject=I'm%20Interested%20In%20You" target="_top">
+                <a href="mailto:kikosbssss@gmail.com?Subject=I'm%20Interested%20In%20You" target="_top">
               <i class="fa fa-envelope-o avatar-icons" aria-hidden="true"></i>
               </a>
             </div>
@@ -85,66 +69,45 @@
         </div>
         <div class="col-8 right-content aldrich-font">
           <h1> I'M
-            <span style="color: #4392F1">ADIR ELFERSY</span>
+            <span style="color: #4392F1">KYRIAKOS BALTATZIDIS</span>
           </h1>
-          <h2>Senior Developer
-            <span style="color: #173753"> &</span> Team Leader <span style="color: #173753"> &</span> Software architect</h2>
-          <p> Works as a team leader & software architect at Quickode ltd. never afraid of handzone. been acompany many chalanging projects with many happy customers. i belive in hard work and a happy attitude :)</p>
+          <h2>Junior Developer
+          <p> </p>
             <div class="row justify-content-center">
                 <div class="col-auto fixed-col">
                   <a href="#">
-                    <img class="avatar-prof" src="img/net.png" data-toggle="tooltip" data-placement="bottom" title="7 years experience" aria-hidden="true">
+                    <img class="avatar-prof" src="img/python.png" data-toggle="tooltip" data-placement="bottom" title="2 years experience" aria-hidden="true">
                   </a>
                 </div>
-                <div class="col-auto fixed-col">
+                                <div class="col-auto fixed-col">
                     <a href="#">
-                      <img class="avatar-prof" src="img/angular.png" data-toggle="tooltip" data-placement="bottom" title="4 years experience" aria-hidden="true">
-                    </a>
-                  </div>
-                <div class="col-auto fixed-col">
-                    <a href="#">
-                        <img class="avatar-prof" src="img/html.png" data-toggle="tooltip" data-placement="bottom" title="7 years experience" aria-hidden="true">
+                        <img class="avatar-prof" src="img/c.png" data-toggle="tooltip" data-placement="bottom" title="2 years experience" aria-hidden="true">
                       </a>
                 </div>
                 <div class="col-auto fixed-col">
                     <a href="#">
-                        <img class="avatar-prof" src="img/js.jpg" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
+                        <img class="avatar-prof" src="img/html.png" data-toggle="tooltip" data-placement="bottom" title="1 year experience" aria-hidden="true">
                       </a>
                 </div>
                 <div class="col-auto fixed-col">
                     <a href="#">
-                        <img class="avatar-prof" src="img/css.jpg" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
+                        <img class="avatar-prof" src="img/js.jpg" data-toggle="tooltip" data-placement="bottom" title="1 year experience" aria-hidden="true">
                       </a>
                 </div>
                 <div class="col-auto fixed-col">
                     <a href="#">
-                        <img class="avatar-prof" src="img/cordova.png" data-toggle="tooltip" data-placement="bottom" title="7 years experience" aria-hidden="true">
+                        <img class="avatar-prof" src="img/css.jpg" data-toggle="tooltip" data-placement="bottom" title="1 year experience" aria-hidden="true">
                       </a>
                 </div>
                 <div class="col-auto fixed-col">
                     <a href="#">
-                        <img class="avatar-prof" src="img/git.png" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
-                      </a>
-                </div>
-                <div class="col-auto fixed-col">
-                    <a href="#">
-                        <img class="avatar-prof" src="img/npm.png" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
-                      </a>
-                </div>
-                <div class="col-auto fixed-col">
-                    <a href="#">
-                        <img class="avatar-prof" src="img/scrum.png" data-toggle="tooltip" data-placement="bottom" title="3 years experience" aria-hidden="true">
-                      </a>
-                </div>
-                <div class="col-auto fixed-col">
-                    <a href="#">
-                        <img class="avatar-prof" src="img/oracle.png" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
+                        <img class="avatar-prof" src="img/git.png" data-toggle="tooltip" data-placement="bottom" title="1 year experience" aria-hidden="true">
                       </a>
                 </div>
               </div>
           <div class="row justify-content-center">
             <div class="col small-text">
-              You can use my profile template for free by forking my repository <a href="https://github.com/adirel/adirel.github.io"><i class="fa fa-github avatar-icons" aria-hidden="true"></i> </a>
+              I am a software developer and passionate with Machine Learning and Artificial Intelligence, I possess expertise in Python programming, while also being proficient in other programming languages. My ability to work effectively in both team and solo settings enables me to deliver high-quality results, consistently. I prioritize effective communication with my team to ensure seamless collaboration and achievement of our goals in a timely and efficient manner.
             </div>
           </div>
         </div>
@@ -248,46 +211,20 @@
         <div class="modal-body">
           <div class="row">
             <div class="col-2">
-                <img class="avatar-prof" src="img/scrum.png" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
+                <img class="avatar-prof" src="img/html.png" data-toggle="tooltip" data-placement="bottom" title="1 years experience" aria-hidden="true">
             </div>
             <div class="col-10">
-              Team leader and SCRUM(agile) master. (tfs)
+              I am interested in creating websites using HTML, CSS, Javascript. Some of the projects I have worked in the past include "Fresh-Shop" an eCommerce website for a shop using Wordpress. "Space Game" a 2d arcade game (HTML, CSS, JAVASCRIPT), "Music-Quiz" an interactive website for the lesson of Music teached in Greek schools for children of sixth grade.<br>
             </div>
           </div>
           <div class="row">
               <div class="col-2">
-                  <img class="avatar-prof" src="img/net.png" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
+                  <img class="avatar-prof" src="img/python.png" data-toggle="tooltip" data-placement="bottom" title="2 years experience" aria-hidden="true">
               </div>
               <div class="col-10">
-                Highly experienced in net/core framework development, infrastracture, enviorments & third party/nugets use.
+                I have 2 years of experience in python programming language, working in projects "League of Legends clasification model", "Using Wikipedia data for Text Simplification a Machine Learning approach", "Creating a youtube view bot to test antiboting systems"
               </div>
             </div>
-            <div class="row">
-                <div class="col-2">
-                    <img class="avatar-prof" src="img/angular.png" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
-                </div>
-                <div class="col-10">
-                  3 years experience in developing angular 5-7 applications, enviorments, deployments and code maintenance.
-                </div>
-              </div>
-          <div class="row">
-              <div class="col-2">
-                  <img class="avatar-prof" src="img/cordova.png" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
-              </div>
-              <div class="col-10">
-                Multiple Mobile projects in cordova/ionic, crossplatform frameworks.
-                Attendance systems, Payroll applications and more.
-              </div>
-            </div>
-            <div class="row">
-                <div class="col-2">
-                    <img class="avatar-prof" src="img/oracle.png" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
-                </div>
-                <div class="col-10">
-                  Experience in various DB providers such as: Oracle 11/12, Microsoft sql, NoSql(firestore,mongo)
-                </div>
-              </div>
-        </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
