--- a/index.html
+++ b/index.html
@@ -115,13 +115,15 @@
                        <div class="col small-text">
                         <ul class="Projects">
                         <h1>Projects<br></h1>
-              <li><b><strong><a href="docs/textsimplification.pdf">Text Simplification(Artificial Intelligence, Machine learning)</a></b></br></strong>A machine learning approach to classify simple and unsimplified sentences using text data from Wikipedia. We used an initial dataset containg 137k aligned sentences, simple and unsimplified from Wikipedia and trained an algorithm to categorize sentences inputed by the user. Our results was a model with 64.79% accuracy validated using 10 fold cross.[In Progress]</br><br></li>
-              <li><b><strong><a href="docs/leagueoflegends.pdf">AI classification model for League Of Legends(Artificial Intelligence, Machine learning)</b></br></strong></a>A classification model that predicts the outcome of League Of Legends games, using data from the first 10 minutes of the game and analyzing how the first 10 minutes impact the result of the game.(average game length: 20 min - 45 min)</br><br></li>
+              <li><b><strong><a href="docs/textsimplification.pdf">Text Simplification(Artificial Intelligence, Machine learning, Python)[English]</a></b></br></strong>A machine learning approach to classify simple and unsimplified sentences using text data from Wikipedia. We used an initial dataset containg 137k aligned sentences, simple and unsimplified from Wikipedia and trained an algorithm to categorize sentences inputed by the user. Our results was a model with 64.79% accuracy validated using 10 fold cross.[In Progress]</br><br></li>
+              <li><b><strong><a href="docs/leagueoflegends.pdf">AI classification model for League Of Legends(Artificial Intelligence, Machine learning)[Greek]</b></br></strong></a>A classification model that predicts the outcome of League Of Legends games, using data from the first 10 minutes of the game and analyzing how the first 10 minutes impact the result of the game.(average game length: 20 min - 45 min)</br><br></li>
+              <li><b><strong><a href="docs/fedex.pdf"> Analyzing IT systems of FedEx[Greek]</b></br></strong></a>
+              We studied the IT structure of FedEx in order to understand how IT systems help to automate tasks and increase productivity.</br><br></li>
               <li><b><strong>Fresh-Shop(Wordpress, HTML, CSS, Javascript)</strong></b></br>
                 Fresh Shop is an eCommerce website build using Wordpress and multiple plugins as a part of an eBussiness class at Ionian University.<br><br></li>
                 <li><b><strong>Space Game(HTML, CSS, Javascript)</strong></b><br>
                 An interactive 2d arcade game where the player avoids asteroids and uses custom power-ups to beat incoming enemies.<br><br></li>
-                <li><b><strong>Music Quizz Web(HTML, CSS, Javascript)</strong></b><br>
+                <li><b><strong>Music Quizz Web(HTML, CSS, Javascript)[Greek]</strong></b><br>
                 Musiz Quizz is a multimedia web app that uses quiz to teach students of sixth grade information about musical instruments and music with an interactive way.<br><br></li> 
 
             </div>
