--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
               <li><b><strong><a href="docs/leagueoflegends.pdf">AI classification model for League Of Legends(Artificial Intelligence, Machine learning)[Greek]</b></br></strong></a>A classification model that predicts the outcome of League Of Legends games, using data from the first 10 minutes of the game and analyzing how the first 10 minutes impact the result of the game.(average game length: 20 min - 45 min)</br><br></li>
               <li><b><strong><a href="docs/fedex.pdf"> Analyzing IT systems of FedEx[Greek]</b></br></strong></a>
               We studied the IT structure of FedEx in order to understand how IT systems help to automate tasks and increase productivity.</br><br></li>
+                <li><b><strong><a href="https://github.com/p18balt/Bash-Automation">Bash Automation[Git repository]</a></strong></b></br></strong>I created a script using bash that automates A1 exercise of HCI course at Ionian University. Consist of a simple cli menu(of exercises) and with git configure feature. It copies two markdown files and resizes images automatically and finnaly pushes at git repository.<br><br></li> 
               <li><b><strong>Fresh-Shop(Wordpress, HTML, CSS, Javascript)</strong></b></br>
                 Fresh Shop is an eCommerce website build using Wordpress and multiple plugins as a part of an eBussiness class at Ionian University.<br><br></li>
                 <li><b><strong>Space Game(HTML, CSS, Javascript)</strong></b><br>
