--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
           <h1> I'M
             <span style="color: #4392F1">KYRIAKOS BALTATZIDIS</span>
           </h1>
-          <h2>Software Developer
+          <h2>Software Developer</h2>
+            <b><strong>This is a pdf generated from html, some functions do not work please visit -> <a href="https://p18balt.github.io/mycv">https://p18balt.github.io/mycv</strong></b></a>
           <p> </p>
             <div class="row justify-content-center">
                 <div class="col-auto fixed-col">
@@ -119,6 +120,12 @@
       </div>
                        <div class="col small-text">
                         <ul class="Projects">
+                          <h1>Personal Information</h1><br>
+                          <b><strong>Name:</strong></b> Kyriakos Baltatzidis<br>
+                          <b><strong>Email:</strong></b> kikosbssss@gmail.com<br>
+                          <b><strong>Github Profile:</strong></b> https://github.com/p18balt/ <br>
+                          <b><strong>Phone number:</strong></b> +306976738335 <br>
+                          <b><strong>Date of birth:</strong></b> 07 July 2000
                         	<h1>Education<br></h1>
             <b><strong>BSC in Computer Science </a></b></strong>- Ionian University		
             <h1>Languages</h1>
