--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                           <h1>Personal Information</h1><br>
                           <b><strong>Name:</strong></b> Kyriakos Baltatzidis<br>
                           <b><strong>Email:</strong></b> kikosbssss@gmail.com<br>
-                          <b><strong>Github Profile:</strong></b> https://github.com/p18balt/ <br>
+                          <b><strong>Github Profile:</strong></b> p18balt <br>
                           <b><strong>Phone number:</strong></b> +306976738335 <br>
                           <b><strong>Date of birth:</strong></b> 07 July 2000
                         	<h1>Education<br></h1>
