--- a/index.html
+++ b/index.html
@@ -136,11 +136,31 @@
               		Bash, Powershell, Lua </br>
               			<b><strong>Markup Languages:</strong></b> HTML <br>
               			<b><strong>Operating Systems:</strong></b> macOS, Arch Linux, Artix Linux, Kali Linux, Microsoft Windows</br>
-              			<b><strong>Commercial Packages:</strong></b> Microsoft Office, Libre Office, Pages, WordPress
+              			<b><strong>Commercial Packages:</strong></b> Microsoft Office, Libre Office, Pages, WordPress, Shopify, Canva
+                    <br><br><h1>Experience<br></h1>
+                          <li>
+ <b><strong>
+    <span title="Visit Green Shop Online">
+        <a href="https://greenshoponline.com.au" target="_blank">Green Shop Online</a>
+    </span> 
+    &nbsp;|&nbsp; 
+    <span title="Visit Cara Water">
+        <a href="https://carawater.com.au" target="_blank">Cara Water</a>
+    </span>
+</strong></b>
+<p>
+    I worked with both <a href="https://greenshoponline.com.au" target="_blank">Green Shop Online</a>, a Shopify-based e-commerce store, and <a href="https://carawater.com.au" target="_blank">Cara Water</a>, a sustainable water solutions brand. My responsibilities included SEO optimization and crafting engaging product descriptions tailored to their unique target audiences. I designed high-quality, visually appealing product visuals using Canva to enhance product presentation and resonate with customers. Additionally, I created personalized email campaigns with Mailchimp, leveraging customer data and trending topics to drive interest and engagement. These efforts significantly improved visibility, customer interaction, and conversion rates for both brands, showcasing my ability to craft effective strategies that boost online sales.
+</p>
 
         
                         <h1>Projects<br></h1>
-              <li><b><strong><span tilte="Click to download pdf."><a href="docs/textsimplification.pdf">Text Simplification(Artificial Intelligence, Machine learning, Python)[English]</a></b></br></strong></span>A machine learning approach to classify simple and unsimplified sentences using text data from Wikipedia. We used an initial dataset containg 137k aligned sentences, simple and unsimplified from Wikipedia and trained an algorithm to categorize sentences inputed by the user. Our results was a model with 64.79% accuracy validated using 10 fold cross.[In Progress]</br><br></li>
+
+
+
+
+
+                        <li><b><strong><span tilte="Click to download pdf."><a href="docs/breast_cancer_ai_baltatzidis_kyriakos.pdf">Breast Cancer AI(Artificial Intelligence, Machine learning, Python)[Greek]</a></b></br></strong></span>This thesis focuses on creating a decision support system for breast cancer diagnosis using machine learning and artificial intelligence techniques. The project includes two main components: training a predictive model using a dataset with labeled medical information and a web-based application for user interaction. The AdaBoost algorithm is employed to train the model, optimizing parameters such as decision tree count and learning rate to enhance performance. The trained model is stored and used in the web application, where users can input health parameters (e.g., BMI, glucose levels) to receive predictions on their health status. The application presents results in a clear, user-friendly interface, providing visual indicators for "Healthy" or "Unhealthy" predictions.</br><br></li>
+              <li><b><strong><span tilte="Click to download pdf."><a href="docs/textsimplification.pdf">Text Simplification(Artificial Intelligence, Machine learning, Python)[English]</a></b></br></strong></span>A machine learning approach to classify simple and unsimplified sentences using text data from Wikipedia. We used an initial dataset containg 137k aligned sentences, simple and unsimplified from Wikipedia and trained an algorithm to categorize sentences inputed by the user. Our results was a model with 64.79% accuracy validated using 10 fold cross.</br><br></li>
               <li><b><strong><span tilte="Click to download pdf."><a href="docs/leagueoflegends.pdf">AI classification model for League Of Legends(Artificial Intelligence, Machine learning)[Greek]</b></br></strong></a></span>A classification model that predicts the outcome of League Of Legends games, using data from the first 10 minutes of the game and analyzing how the first 10 minutes impact the result of the game.(average game length: 20 min - 45 min)</br><br></li>
               <li><b><strong><span tilte="Click to download pdf."><a href="docs/fedex.pdf"> Analyzing IT systems of FedEx[Greek]</b></br></strong></a></span>
               We studied the  structure of the IT systems used by FedEx in order to understand how IT systems help to automate tasks and increase productivity.</br><br></li>
