--- a/index.html
+++ b/index.html
@@ -131,15 +131,16 @@
               				<b><li><strong>Greek</strong></a></span></b> - Native
               				<b><li><strong>English</b></strong></b></a></span> - Advanced (Michigan State University Certificate of English Language Proficiency)
               			<h1>Skills</h1>
-              			<b><strong>Programming Languages:</b></strong> Python, C, C++, Java, Javascript<br>
+              			<b><strong>Programming Languages:</b></strong> Python, C, C++, C#(ASP.NET MVC5),Java, Javascript<br>
               			<b><strong>Scripting Languages:</strong></b>
               		Bash, Powershell, Lua </br>
               			<b><strong>Markup Languages:</strong></b> HTML <br>
               			<b><strong>Operating Systems:</strong></b> macOS, Arch Linux, Artix Linux, Kali Linux, Microsoft Windows</br>
-              			<b><strong>Commercial Packages:</strong></b> Microsoft Office, Libre Office, Pages, WordPress, Shopify, Canva
+              			<b><strong>Commercial Packages:</strong></b> Microsoft Office, Libre Office, Pages, WordPress, Shopify, Canva<br>
+                    <b><strong>Technical skills:</strong></b> Troubleshooting and repairing laptops, PCs, and printers. Proficient in diagnosing hardware and software issues, performing system restorations, hardware replacements, and resolving connectivity problems. Skilled in utilizing tools for system diagnostics and repair, and experienced in maintaining peripherals like printers and scanners.
                     <br><br><h1>Experience<br></h1>
                           <li>
- <b><strong>
+<b><strong>
     <span title="Visit Green Shop Online">
         <a href="https://greenshoponline.com.au" target="_blank">Green Shop Online</a>
     </span> 
@@ -151,7 +152,15 @@
 <p>
     I worked with both <a href="https://greenshoponline.com.au" target="_blank">Green Shop Online</a>, a Shopify-based e-commerce store, and <a href="https://carawater.com.au" target="_blank">Cara Water</a>, a sustainable water solutions brand. My responsibilities included SEO optimization and crafting engaging product descriptions tailored to their unique target audiences. I designed high-quality, visually appealing product visuals using Canva to enhance product presentation and resonate with customers. Additionally, I created personalized email campaigns with Mailchimp, leveraging customer data and trending topics to drive interest and engagement. These efforts significantly improved visibility, customer interaction, and conversion rates for both brands, showcasing my ability to craft effective strategies that boost online sales.
 </p>
-
+<li>
+<b><strong>
+    <span title="Visit CITIBILL">
+        <a href="https://www.citibill.gr" target="_blank">CITIBILL</a>
+    </span> 
+</strong></b>
+<p>
+    Worked on the <a href="https://greenshoponline.com.au" target="_blank">CITIBILL project </a>, developing a robust web application using ASP.NET MVC5 and DevExpress. Designed and implemented user-friendly interfaces, enhancing user experience and functionality. Developed dynamic, data-driven features with efficient database integration and ensured high performance and scalability of the application. Actively collaborated with cross-functional teams to align technical solutions with business goals, while adhering to best practices in coding, testing, and deployment. Delivered a reliable, maintainable solution that met and exceeded client expectations.
+</p>
         
                         <h1>Projects<br></h1>
 
