--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               </a>
             </div>
             <div class="col-auto">
-              <a href="docs/KyriakosBaltatzidis.pdf">
+              <a href="docs/balt_cv.pdf">
               <i class="fa fa-file-pdf-o avatar-icons" aria-hidden="true"></i>
               </a>
             </div>
