--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               				<b><li><strong>Greek</strong></a></span></b> - Native
               				<b><li><strong>English</b></strong></b></a></span> - Advanced (Michigan State University Certificate of English Language Proficiency)
               			<h1>Skills</h1>
-              			<b><strong>Programming Languages:</b></strong> Python, C, C++, C#(ASP.NET MVC5),Java, Javascript<br>
+              			<b><strong>Programming Languages:</b></strong> Python, C, C++, C#(ASP.NET MVC5),Java, Javascript, MySQL<br>
               			<b><strong>Scripting Languages:</strong></b>
               		Bash, Powershell, Lua </br>
               			<b><strong>Markup Languages:</strong></b> HTML <br>
