--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
               				<b><li><strong>Greek</strong></a></span></b> - Native
               				<b><li><strong>English</b></strong></b></a></span> - Advanced (Michigan State University Certificate of English Language Proficiency)
               			<h1>Skills</h1>
-              			<b><strong>Programming Languages:</b></strong> Python, C, C++, C#,ASP.NET MVC5,Java, Javascript, MySQL, T-SQL<br>
-              			<b><strong>Scripting Languages:</strong></b>
-              		Bash, Powershell, Lua </br>
-              			<b><strong>Markup Languages:</strong></b> HTML <br>
-              			<b><strong>Operating Systems:</strong></b> macOS, Arch Linux, Artix Linux, Kali Linux, Microsoft Windows</br>
-              			<b><strong>Commercial Packages:</strong></b> Microsoft Office, Libre Office, Pages, WordPress, Shopify, Canva<br>
-                    <b><strong>Technical skills:</strong></b> Troubleshooting and repairing laptops, PCs, and printers. Proficient in diagnosing hardware and software issues, performing system restorations, hardware replacements, and resolving connectivity problems. Skilled in utilizing tools for system diagnostics and repair, and experienced in maintaining peripherals like printers and scanners.
-                    <br><br><h1>Experience<br></h1>
+<b><strong>Programming Languages:</strong></b> Python, C, C++, C#, ASP.NET MVC5, Java, Javascript, MySQL, T-SQL<br>
+<b><strong>Scripting Languages:</strong></b> Bash, Powershell, Lua </br>
+<b><strong>Markup Languages:</strong></b> HTML <br>
+<b><strong>Operating Systems:</strong></b> macOS, Arch Linux, Artix Linux, Kali Linux, Microsoft Windows<br>
+<b><strong>Virtualization Technologies:</strong></b> VirtualBox, VMware<br>
+<b><strong>Commercial Packages:</strong></b> Microsoft Office, Libre Office, Pages, WordPress, Shopify, Canva<br>
+<b><strong>Technical skills:</strong></b> Troubleshooting and repairing laptops, PCs, and printers. Proficient in diagnosing hardware and software issues, performing system restorations, hardware replacements, and resolving connectivity problems. Skilled in utilizing tools for system diagnostics and repair, and experienced in maintaining peripherals like printers and scanners.
+
                           <li>
 <b><strong>
     <span title="Visit Green Shop Online">
