--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
 
   <title>Kyriakos Baltatzidis</title>
-  <meta name="description" content="Kyriakos Baltatzidis portofolio site">
+  <meta name="description" content="Kyriakos Baltatzidis portfolio site">
   <meta name="author" content="Kyriakos Baltatizidis">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
     crossorigin="anonymous">
