--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </span> 
     &nbsp;|&nbsp; 
     <span title="Visit Cara Water">
-        <a href="https://carawater.com.au" target="_blank">Cara Water</a>
+        <a href="https://carawater.com.au" target="_blank">Cara Water</a> [Wordpress, Shopify]
     </span>
 </strong></b>
 <p>
@@ -155,7 +155,7 @@
 <li>
 <b><strong>
     <span title="Visit CITIBILL">
-        <a href="https://www.citibill.gr" target="_blank">CITIBILL</a>
+        <a href="https://www.citibill.gr" target="_blank">CITIBILL</a> [ASP.NET MVC5, Devexpress, T-SQL]
     </span> 
 </strong></b>
 <p>
