--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 <br><h1>Experience</h1>
                           <li>
 <b><strong>
+  WEB Designer at
     <span title="Visit Green Shop Online">
         <a href="https://greenshoponline.com.au" target="_blank">Green Shop Online</a>
     </span> 
@@ -154,6 +155,7 @@
 </p>
 <li>
 <b><strong>
+  WEB Developer at
     <span title="Visit CITIBILL">
         <a href="https://www.citibill.gr" target="_blank">CITIBILL</a> [ASP.NET MVC5, Devexpress, T-SQL]
     </span> 
