--- a/index.html
+++ b/index.html
@@ -147,17 +147,27 @@
     </span> 
     &nbsp;|&nbsp; 
     <span title="Visit Cara Water">
-        <a href="https://carawater.com.au" target="_blank">Cara Water</a> [Wordpress, Shopify]
+        <a href="https://carawater.com.au" target="_blank">Cara Water</a> 
+    </span>
+    &nbsp;|&nbsp; 
+    <span title="Visit tsaksconsulting">
+        <a href="https://tsaksconsulting.gr" target="_blank">TsaksConsulting</a> 
+    </span>
+    &nbsp;|&nbsp; 
+    <span title="Visit tsaks">
+        <a href="https://tsaks.com" target="_blank">Tsaks.com</a> [Wordpress, Shopify]
     </span>
 </strong></b>
 <p>
-    I worked with both <a href="https://greenshoponline.com.au" target="_blank">Green Shop Online</a>, a Shopify-based e-commerce store, and <a href="https://carawater.com.au" target="_blank">Cara Water</a>, a sustainable water solutions brand. My responsibilities included SEO optimization and crafting engaging product descriptions tailored to their unique target audiences. I designed high-quality, visually appealing product visuals using Canva to enhance product presentation and resonate with customers. Additionally, I created personalized email campaigns with Mailchimp, leveraging customer data and trending topics to drive interest and engagement. These efforts significantly improved visibility, customer interaction, and conversion rates for both brands, showcasing my ability to craft effective strategies that boost online sales.
+    I worked with both <a href="https://greenshoponline.com.au" target="_blank">Green Shop Online</a>, a Shopify-based e-commerce store, and <a href="https://carawater.com.au" target="_blank">Cara Water</a>, a sustainable water solutions brand. Additionally, I worked on <a href="https://tsaks.com" target="_blank">Tsaks</a> and <a href="https://tsaksconsulting.gr" target="_blank">Tsaks Consulting</a>, both WordPress-based sites.
+
+My responsibilities included SEO optimization and crafting engaging product descriptions tailored to their unique target audiences. I designed high-quality, visually appealing product visuals using Canva to enhance product presentation and resonate with customers. Additionally, I created personalized email campaigns with Mailchimp, leveraging customer data and trending topics to drive interest and engagement. These efforts significantly improved visibility, customer interaction, and conversion rates for all brands, showcasing my ability to craft effective strategies that boost online sales.
 </p>
 <li>
 <b><strong>
   WEB Developer at
     <span title="Visit CITIBILL">
-        <a href="https://www.citibill.gr" target="_blank">CITIBILL</a> [ASP.NET MVC5, Devexpress, T-SQL]
+        <a href="https://www.citibill.gr" target="_blank">CITIBILL</a> [ASP.NET MVC5, Devexpress, SQL SERVER T-SQL]
     </span> 
 </strong></b>
 <p>
