--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 <b><strong>Programming Languages:</strong></b> Python, C, C++, C#, ASP.NET MVC5, Java, Javascript, MySQL, T-SQL<br>
 <b><strong>Scripting Languages:</strong></b> Bash, Powershell, Lua </br>
 <b><strong>Markup Languages:</strong></b> HTML <br>
+<b><strong>Style Sheet Languages:</strong></b> CSS
 <b><strong>Operating Systems:</strong></b> macOS, Arch Linux, Artix Linux, Kali Linux, Microsoft Windows<br>
 <b><strong>Virtualization Technologies:</strong></b> VirtualBox, VMware<br>
 <b><strong>Commercial Packages:</strong></b> Microsoft Office, Libre Office, Pages, WordPress, Shopify, Canva<br>
@@ -167,7 +168,7 @@ My responsibilities included SEO optimization and crafting engaging product desc
 <b><strong>
   WEB Developer at
     <span title="Visit CITIBILL">
-        <a href="https://www.citibill.gr" target="_blank">CITIBILL</a> [ASP.NET MVC5, Devexpress, SQL SERVER T-SQL]
+        <a href="https://www.citibill.gr" target="_blank">CITIBILL</a> [ASP.NET MVC5, Devexpress, SQL SERVER T-SQL, HTML, CSS, Javascript]
     </span> 
 </strong></b>
 <p>
