--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 <b><strong>Operating Systems:</strong></b> macOS, Arch Linux, Artix Linux, Kali Linux, Microsoft Windows<br>
 <b><strong>Virtualization Technologies:</strong></b> VirtualBox, VMware<br>
 <b><strong>Commercial Packages:</strong></b> Microsoft Office, Libre Office, Pages, WordPress, Shopify, Canva<br>
+<b><strong>Email Marketing Platforms:</strong></b> Mailchimp
 <b><strong>Technical skills:</strong></b> Troubleshooting and repairing laptops, PCs, and printers. Proficient in diagnosing hardware and software issues, performing system restorations, hardware replacements, and resolving connectivity problems. Skilled in utilizing tools for system diagnostics and repair, and experienced in maintaining peripherals like printers and scanners.
 <br><h1>Experience</h1>
                           <li>
