--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 <b><strong>Programming Languages:</strong></b> Python, C, C++, C#, ASP.NET MVC5, Java, Javascript, MySQL, T-SQL<br>
 <b><strong>Scripting Languages:</strong></b> Bash, Powershell, Lua </br>
 <b><strong>Markup Languages:</strong></b> HTML <br>
-<b><strong>Style Sheet Languages:</strong></b> CSS
+<b><strong>Style Sheet Languages:</strong></b> CSS <br>
 <b><strong>Operating Systems:</strong></b> macOS, Arch Linux, Artix Linux, Kali Linux, Microsoft Windows<br>
 <b><strong>Virtualization Technologies:</strong></b> VirtualBox, VMware<br>
 <b><strong>Commercial Packages:</strong></b> Microsoft Office, Libre Office, Pages, WordPress, Shopify, Canva<br>
