--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               				<b><li><strong>English</b></strong></b></a></span> - Advanced (Michigan State University Certificate of English Language Proficiency)
               			<h1>Skills</h1>
 <b><strong>Programming Languages:</strong></b> Python, C, C++, C#, ASP.NET MVC5, Java, Javascript, MySQL, T-SQL<br>
-<b><strong>Scripting Languages:</strong></b> Bash, Powershell, Lua </br>
+<b><strong>Scripting Languages:</strong></b> Bash </br>
 <b><strong>Markup Languages:</strong></b> HTML <br>
 <b><strong>Style Sheet Languages:</strong></b> CSS <br>
 <b><strong>Operating Systems:</strong></b> macOS, Arch Linux, Artix Linux, Kali Linux, Microsoft Windows<br>
