--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
                           <b><strong>Name:</strong></b> Kyriakos Baltatzidis<br>
                           <b><strong>Email:</strong></b> kikosbssss@gmail.com<br>
                           <b><strong>Github Profile:</strong></b> p18balt <br>
-                          <b><strong>Phone number:</strong></b> +306976738335 <br>
+                          <b><strong>Phone number:</strong></b> +30 6976738335 <br>
+                          <b><strong>Phone number(CYP):</strong></b> +357 94026360<br>
                           <b><strong>Date of birth:</strong></b> 07 July 2000
                         	<h1>Education<br></h1>
             <b><strong>BSC in Computer Science </a></b></strong>- Ionian University		
