--- a/index.html
+++ b/index.html
@@ -326,6 +326,15 @@ My responsibilities included SEO optimization and crafting engaging product desc
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
+  <script>
+document.addEventListener('DOMContentLoaded', function() {
+    document.querySelector('a[href="docs/balt_cv.pdf"]').onclick = function(e) {
+        e.preventDefault();
+        window.print();
+    };
+});
+</script>
+</body>
 </body>
 
 </html>
