--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
                           <h1>Personal Information</h1><br>
                           <b><strong>Name:</strong></b> Kyriakos Baltatzidis<br>
                           <b><strong>Email:</strong></b> kikosbssss@gmail.com<br>
-                          <b><strong>Github Profile:</strong></b> p18balt <br>
+                          <b><strong>Github Profile:</strong></b> <span title="Visit p18balt github">
+        <a href="https://github.com/p18balt" target="_blank">p18balt</a>
+    </span>  <br>
                           <b><strong>Phone number:</strong></b> +30 6976738335 <br>
                           <b><strong>Phone number(CYP):</strong></b> +357 94026360<br>
                           <b><strong>Date of birth:</strong></b> 07 July 2000
@@ -140,7 +142,8 @@
 <b><strong>Virtualization Technologies:</strong></b> VirtualBox, VMware<br>
 <b><strong>Commercial Packages:</strong></b> Microsoft Office, Libre Office, Pages, WordPress, Shopify, Canva<br>
 <b><strong>Email Marketing Platforms:</strong></b> Mailchimp <br>
-<b><strong>Technical skills:</strong></b> Troubleshooting and repairing laptops, PCs, and printers. Proficient in diagnosing hardware and software issues, performing system restorations, hardware replacements, and resolving connectivity problems. Skilled in utilizing tools for system diagnostics and repair, and experienced in maintaining peripherals like printers and scanners.
+<b><strong>Technical skills:</strong></b> Troubleshooting and repairing laptops, PCs, and printers. Proficient in diagnosing hardware and software issues, performing system restorations, hardware replacements, and resolving connectivity problems. Skilled in utilizing tools for system diagnostics and repair, and experienced in maintaining peripherals like printers and scanners.<br>
+<b><strong>Μilitary obligations status:</strong></b> Completed <br>
 <br><h1>Experience</h1>
                           <li>
 <b><strong>
@@ -158,11 +161,11 @@
     </span>
     &nbsp;|&nbsp; 
     <span title="Visit tsaks">
-        <a href="https://tsaks.com" target="_blank">Tsaks.com</a> [Wordpress, Shopify]
+        <a href="https://tsaks.com" target="_blank">Tsaks.com</a> [Wordpress, Shopify] [10/2024 - 10/2025]
     </span>
 </strong></b>
 <p>
-    I worked with both <a href="https://greenshoponline.com.au" target="_blank">Green Shop Online</a>, a Shopify-based e-commerce store, and <a href="https://carawater.com.au" target="_blank">Cara Water</a>, a sustainable water solutions brand. Additionally, I worked on <a href="https://tsaks.com" target="_blank">Tsaks</a> and <a href="https://tsaksconsulting.gr" target="_blank">Tsaks Consulting</a>, both WordPress-based sites.
+    I worked with both <a href="https://greenshoponline.com.au" target="_blank">Green Shop Online</a>, a Shopify-based e-commerce store, and <a href="https://carawater.com.au" target="_blank">Cara Water</a>, a sustainable water solutions brand. Additionally, I worked on <a href="https://tsaks.com" target="_blank">Tsaks</a> and <a href="https://tsaksconsulting.gr" target="_blank">Tsaks Consulting</a>, both WordPress-based sites. 
 
 My responsibilities included SEO optimization and crafting engaging product descriptions tailored to their unique target audiences. I designed high-quality, visually appealing product visuals using Canva to enhance product presentation and resonate with customers. Additionally, I created personalized email campaigns with Mailchimp, leveraging customer data and trending topics to drive interest and engagement. These efforts significantly improved visibility, customer interaction, and conversion rates for all brands, showcasing my ability to craft effective strategies that boost online sales.
 </p>
@@ -170,7 +173,7 @@ My responsibilities included SEO optimization and crafting engaging product desc
 <b><strong>
   WEB Developer at
     <span title="Visit CITIBILL">
-        <a href="https://www.citibill.gr" target="_blank">CITIBILL</a> [ASP.NET MVC5, Devexpress, SQL SERVER T-SQL, HTML, CSS, Javascript]
+        <a href="https://www.citibill.gr" target="_blank">CITIBILL</a> [ASP.NET MVC5, Devexpress, SQL SERVER T-SQL, HTML, CSS, Javascript] [06/2022 - 08/2022]
     </span> 
 </strong></b>
 <p>
