--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ My responsibilities included SEO optimization and crafting engaging product desc
 <b><strong>
   WEB Developer at
     <span title="Visit CITIBILL">
-        <a href="https://www.citibill.gr" target="_blank">CITIBILL</a> [ASP.NET MVC5, Devexpress, SQL SERVER T-SQL, HTML, CSS, Javascript] [06/2022 - 08/2022]
+        <a href="https://www.citibill.gr" target="_blank">CITIBILL</a> [ASP.NET MVC5, Devexpress, SQL SERVER T-SQL, HTML, CSS, Javascript] [06/2022 - 08/2022](Internship)
     </span> 
 </strong></b>
 <p>
