--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
 <b><strong>Commercial Packages:</strong></b> Microsoft Office, Libre Office, Pages, WordPress, Shopify, Canva<br>
 <b><strong>Email Marketing Platforms:</strong></b> Mailchimp <br>
 <b><strong>Technical skills:</strong></b> Troubleshooting and repairing laptops, PCs, and printers. Proficient in diagnosing hardware and software issues, performing system restorations, hardware replacements, and resolving connectivity problems. Skilled in utilizing tools for system diagnostics and repair, and experienced in maintaining peripherals like printers and scanners.<br>
+<b><strong>Ticketing systems:</strong></b> Jira <br>
 <b><strong>Μilitary obligations status:</strong></b> Completed <br>
+
 <br><h1>Experience</h1>
                           <li>
 <b><strong>
